--- a/main.html
+++ b/main.html
@@ -6,8 +6,25 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="width:1100px;">
 	<!-- the entire body must be written by student -->
+	<table style="border:1px solid;width:40%">
+		<thead>
+			<th style="width:200px;">First Column</th>
+			<th style="width:600px;">Middle Column</th>
+			<th style="width:200px">Last Column</th>
+		</thead>
+		<tr>
+			<td><img class="imageContainer;"></td>
+			<td><p>fasdjhgkljsahgkjsadffnasdkljfhsadkjlfhsakljryewlusakrfhasjklf</p></td>
+			<td><img class="imageContainer;"></td>
+		</tr>
+		<tr>
+			<td><img class="imageContainer;"></td>
+			<td><p>fhaksrhlaksjhrjsdkfnhsadjkfhsdajfklyrjklasnf</p></td>
+			<td><img class="imageContainer;"</td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
