--- a/main.html
+++ b/main.html
@@ -15,14 +15,14 @@
 			<th style="width:200px">Last Column</th>
 		</thead>
 		<tr>
-			<td><img class="imageContainer;"></td>
+			<td><div class="imageContainer"><img></div</td>
 			<td><p>fasdjhgkljsahgkjsadffnasdkljfhsadkjlfhsakljryewlusakrfhasjklf</p></td>
-			<td><img class="imageContainer;"></td>
+			<td><div class="imageContainer"><img></div</td>
 		</tr>
 		<tr>
-			<td><img class="imageContainer;"></td>
+			<td><div class="imageContainer"><img></div</td>
 			<td><p>fhaksrhlaksjhrjsdkfnhsadjkfhsdajfklyrjklasnf</p></td>
-			<td><img class="imageContainer;"</td>
+			<td><div class="imageContainer"><img></div</td>
 		</tr>
 	</table>
     <script type="text/javascript" src="./script.js">
