--- a/main.html
+++ b/main.html
@@ -15,14 +15,14 @@
 			<th style="width:200px;">Last Column</th>
 		</thead>
 		<tr>
-			<td><div class="imageContainer"><img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png" style="height:10%; width:10%;"></div></td>
+			<td><div class="imageContainer"><img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png" style="height:40px; width:40px;"></div></td>
 			<td><p>fasdjhgkljsahgkjsadffnasdkljfhsadkjlfhsakljryewlusakrfhasjklf</p></td>
-			<td><div class="imageContainer"><img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png" style="height:10%; width:10%;"></div></td>
+			<td><div class="imageContainer"><img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png" style="height:40px; width:40px;"></div></td>
 		</tr>
 		<tr>
-			<td><div class="imageContainer"><img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png" style="height:10%; width:10%;"></div</td>
+			<td><div class="imageContainer"><img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png" style="height:40px; width:40px;"></div></td>
 			<td><p>fhaksrhlaksjhrjsdkfnhsadjkfhsdajfklyrjklasnf</p></td>
-			<td><div class="imageContainer"><img src=""></div></td>
+			<td><div class="imageContainer"><img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png"></div></td>
 		</tr>
 	</table>
     <script type="text/javascript" src="./script.js">
