--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body style="width:1100px;">
 	<!-- the entire body must be written by student -->
-	<table style="border:1px solid;width:40%">
+	<table style="border:1px solid blue;width:40%">
 		<thead>
 			<th style="width:200px;">First Column</th>
 			<th style="width:600px;">Middle Column</th>
