--- a/main.html
+++ b/main.html
@@ -8,18 +8,21 @@
 
 <body style="width:1100px;">
 	<!-- the entire body must be written by student -->
-	<table style="border:1px solid blue;width:40%">
+	<table style="border:1px solid blue;width:40%;">
 		<thead>
+			<th>Row</th>
 			<th style="width:200px;">First Column</th>
 			<th style="width:600px;">Middle Column</th>
 			<th style="width:200px;">Last Column</th>
 		</thead>
 		<tr>
+			<td>1</td>
 			<td><div class="imageContainer"><img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png" style="height:40px; width:40px;"></img></div></td>
 			<td><p>fasdjhgkljsahgkjsjfhsadkjlfhsakljryewlusakrfhasjklf</p></td>
 			<td><div class="imageContainer"><img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png" style="height:40px; width:40px;"></img></div></td>
 		</tr>
 		<tr>
+			<td>2</td>
 			<td><div class="imageContainer"><img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png" style="height:40px; width:40px;"></img></div></td>
 			<td><p>fhaksrhlaksjhrjsdkfnhsadjkfhsdajfklyrjklasnf</p></td>
 			<td>
