--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<table style="border:1px solid blue;width:40%;">
 		<thead>
-			<th style="width:200px;">First Column</th>
-			<th style="width:600px;">Middle Column</th>
-			<th style="width:200px;">Last Column</th>
+			<td style="width:200px;">First Column</td>
+			<td style="width:600px;">Middle Column</td>
+			<td style="width:200px;">Last Column</td>
 		</thead>
 		<tr>
 			<td><div class="imageContainer"><img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png" style="height:40px; width:40px;"></img></div></td>
